<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">地盘100</string>
	<string name="place">地盘</string>
	<string name="confirm">确定</string>
	<string name="more">更多...</string>
	<string name="create">创建</string>
	<string name="post">发表</string>
	<string name="take_photo">拍照</string>
	<string name="photo_gallery">相册</string>
	<string name="weibo">微博</string>
	<string name="text">文本</string>
	<string name="picture">图片</string>
	
	<string name="reg_use_other_site">使用已有ID</string>
	<string name="reg_use_weibo_id">使用微博ID</string>
	<string name="reg_use_renren_id">使用人人ID</string>
	<string name="reg_input_login_id">或输入您的登陆名（40个字符内，不能含空格？）</string>
	<string name="reg_error_deviceIdBind">设备ID已经绑定用户 ？怎么办？！</string>
	<string name="reg_error_serverError">服务器错误，请重试！</string>
	<string name="reg_error_unkown">注册失败，未知错误，请重试！</string>
	
	<string name="for_dev_only">开发调试使用！</string>
	
	<string name="create_new_place">创建新地盘</string>
	<string name="create_new_post">创建新帖子</string>
	<string name="create_place_success">地盘创建成功！</string>
	<string name="create_post_success">帖子发表成功！</string>
	<string name="place_name">地盘名称...</string>
	<string name="place_desc">地盘描述...</string>
	<string name="post_content">帖子内容...</string>
	<string name="follow">关注</string>
	<string name="unfollow">取消关注</string>
	<string name="refresh">刷新</string>
	<string name="reply">回复</string>
	<string name="go_back">返回</string>
	<string name="place_list">地盘列表 </string>
	<string name="place_post_list">地盘帖子列表 </string>
	<string name="place_latest_post">地盘最新帖子</string>
	<string name="post_detail">帖子详细信息</string>
	<string name="related_post">所有相关帖子</string>
	<string name="nearby_places">周边地盘 </string>
	<string name="followed">我的关注 </string>
	<string name="nearby_posts">周边热帖 </string>
	<string name="replied_posts">回复我的 </string>
	<string name="op_fail_pls_retry">操作失败，请稍后重试 </string>
	
	<!-- remove following stubs -->
	<string name="todo">//TODO</string>
	<string name="header_left_text">左边</string>
	<string name="header_right_text">右边</string>
	<string name="main_tab_1">地盘</string>
	<string name="main_tab_2">信息</string>
	<string name="main_tab_3">我</string>
	<string name="main_tab_4">邀请</string>
	<string name="main_tab_5">反馈</string>
	<string name="around">周边</string>
	<string name="follow">关注</string>
	<string name="me">我</string>
	<string name="private_msg">私信</string>
	<string name="LOGIN_SINA">登录新浪微博</string>
</resources>
