<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/LinearLayout1" xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="bottom">
		<TextView android:layout_width="fill_parent" android:text="@string/reg_use_other_site"
			android:layout_height="wrap_content" android:layout_marginTop="20dip"
			android:textSize="18sp" />
		<TableLayout android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_gravity="center"
			android:stretchColumns="*">
			<TableRow>
				<Button android:id="@+id/reg_use_weibo_id" android:text="@string/reg_use_weibo_id" />
				<Button android:id="@+id/reg_use_renren_id" android:text="@string/reg_use_renren_id" />
				<TextView /> <!-- just for padding -->
				<TextView />
				<TextView />
				<TextView />
				<TextView />
				<TextView />
			</TableRow>
		</TableLayout>
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="top">
		<TextView android:text="@string/reg_input_login_id"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginTop="20dip"
			android:textSize="18sp" />
		<EditText android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:id="@+id/reg_login_id" />
		<Button android:id="@+id/register" android:text="@string/confirm"
			android:layout_width="wrap_content" android:layout_height="wrap_content" />
		<TextView android:id="@+id/reg_error_info"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginTop="20dip"
			android:layout_marginLeft="20dip" android:textSize="15sp" />
	</LinearLayout>

</LinearLayout>
