<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/background" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">

	<RelativeLayout android:gravity="center_vertical"
		android:layout_gravity="top" android:background="@drawable/title_lightgray_bg"
		android:layout_width="fill_parent" android:layout_height="45dip">
		<LinearLayout android:gravity="center"
			android:layout_marginLeft="60dip" android:layout_marginRight="60dip"
			android:layout_marginTop="8dip" android:layout_marginBottom="8dip"
			android:orientation="horizontal" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:textSize="11.0sp" android:textColor="#FFFFFF"
				android:background="@drawable/title_button_group_left"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/around" android:layout_weight="1.0" />
			<Button android:textSize="11.0sp" android:textColor="#FFFFFF"
				android:background="@drawable/title_button_group_middle"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/follow" android:layout_weight="1.0" />
			<Button android:textSize="11.0sp" android:textColor="#FFFFFF"
				android:background="@drawable/title_button_group_middle"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/me" android:layout_weight="1.0" />
			<Button android:textSize="11.0sp" android:textColor="#FFFFFF"
				android:background="@drawable/title_button_group_right"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/private_msg" android:layout_weight="1.0" />
		</LinearLayout>
	</RelativeLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="top">
		<TextView android:text="@string/main_tab_2"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginBottom="25dip"
			android:layout_marginTop="25dip" android:textSize="24.5sp" />
	</LinearLayout>

</LinearLayout>
