<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@android:color/white" android:layout_height="fill_parent"
	android:layout_width="fill_parent" android:orientation="vertical">

	<RelativeLayout android:gravity="center_vertical"
		android:layout_gravity="top" android:background="@drawable/title_lightgray_bg"
		android:layout_width="fill_parent" android:layout_height="45dip">
		<LinearLayout android:gravity="center"
			android:layout_marginLeft="100dip" android:layout_marginRight="100dip"
			android:layout_marginTop="8dip" android:layout_marginBottom="8dip"
			android:orientation="horizontal" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<Button android:id="@+id/nearby_places" android:textSize="12sp"
				android:textColor="#FFFFFF" android:background="@drawable/title_button_group_left"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/nearby_places" android:layout_weight="1.0"
				android:focusableInTouchMode="true">
				<requestFocus />
			</Button>
			<Button android:id="@+id/followed_places" android:textSize="12sp"
				android:textColor="#FFFFFF" android:background="@drawable/title_button_group_right"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/followed" android:layout_weight="1.0"
				android:focusableInTouchMode="true" />
		</LinearLayout>
		<LinearLayout android:gravity="right|center_vertical"
			android:layout_alignParentRight="true" android:layout_marginRight="12dip"
			android:layout_marginTop="8dip" android:layout_marginBottom="8dip"
			android:orientation="horizontal" android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<ImageButton android:layout_height="30dp" android:src="@drawable/item_add"
				android:layout_width="30dp" android:id="@+id/place_new"></ImageButton>
		</LinearLayout>
	</RelativeLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:layout_gravity="top">
		<ListView android:id="@android:id/list" android:layout_width="fill_parent"
			android:layout_height="fill_parent" 
			android:divider="#FFCC00" 
			android:dividerHeight="1.5dp" 
			android:cacheColorHint="#00000000" />
	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_height="fill_parent" android:layout_width="fill_parent"
		android:layout_gravity="top">
		<TextView android:id="@+id/more" android:text="@string/refresh"
			android:layout_gravity="center" android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:layout_marginBottom="25dip"
			android:layout_marginTop="16dip" android:textSize="24sp"
			android:clickable="true" />
	</LinearLayout>

</LinearLayout>
